css/mobile.css
.mobileHeader{
	background:white;
	display:flex;
	height:10vh;
	flex-flow:row;
	align-items:stretch;
}

.mobileHeaderSection{
	color:#efd139;
	font-family: 'Skranji', cursive;
	display:flex;
	flex-flow:row wrap;
	justify-content:center;
	font-size:7vh;
	flex-grow:1;
	align-items:center;
}

.mobileHeaderSection p{
	font-size:20%;
	margin:0;
}

.iconDiv{
	display:inline-flex;
	flex-flow:column nowrap;
	align-items:center;
}

.iconSection{
	font-size:6.5vh;
}

.mobileTextDisplay{
	background:rgba(0,0,0,.5);
	color:white;
	padding:1vw;
	font-size:200%;
	flex-grow:1;
	text-align:center;
	max-height:45vh;
}

h3{
	font-family:'Skranji', cursive;
}

.mobileSection{
	background:#e24226;
	font-size:200%;
	color:white;
}

.background{
	height:90vh;
	display:flex;
	justify-content:center;
	align-items:flex-end;
}

.sectionContainer div:nth-of-type(2n){
	background:#E25339;
}

